src/tests/errors/refs/002.ura
// errors/refs/002 — ref of mismatched type
use "@/header"

main():
    x int = 5
    ref y chars = x
    output(y, "\n")
